tests/NormalTests/paczka1/small_fuzzy/56659804.err
Error in line 3: 9kYq2lQECj S58 84,6
Error in line 7: 6hH95vy S0 52,0
Error in line 8: Cj9nLY S0 74,2
Error in line 9: Cj9nLY S0 311,6
Error in line 10: ?S0
Error in line 1: Cj9nLY S724 27,8
Error in line 12: 6hH95vy S0 76,6
